--- a/Software Engineering Project/nbproject/project.properties
+++ b/Software Engineering Project/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=SoftwareEngineeringProject
-main.class=software.engineering.project.SoftwareEngineeringProject
+main.class=Model.SoftwareEngineeringProject
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
